--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="winner" align="center">Tic-tac-toe</div>
     <div id="insertTable" align="center"></div>
-    <div id="newGameButton" align="center"></div>
+    <div class='newGameButton' id="newGameButton" align="center"></div>
     <div id="outcome" align="center"></div>
     <script type="text/javascript" src="code.js"></script>
 </body>
