--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>ТТТ</title>
+  <title>TIC-TAC-TOE</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
 <body>
